<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CartIn</string>
    <string name="action_settings">Settings</string>
    <string name="banner_main">Before Shopping!</string>
    <string name="banner_desc">Enter the name of store to know the items you purchase. And enter planned budget to keep a watch on yourself! </string>
    <string name="enterStoreName">Enter Store Name:</string>
    <string name="editStoreName">eg. Target,Costco</string>
    <string name="enterBudget">Enter Budget:</string>
    <string name="editBudget">eg. 100 (taken in $)</string>
    <string name="enter_address">enter_address</string>
    <string name="edit_address">edit_address</string>
    <string name="button_Signup">button_Signup</string>
    <string name="buttonGoToCart">Proceed to Cart</string>
    <string name="buttonClose">Close</string>
    <string name="buttonCloseApp">Close App</string>
    <string name="title_activity_store_budget_details">StoreBudgetDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="storeName">NameOfStore</string>
    <string name="location">Location:</string>
    <string name="date">Date</string>
    <string name="budget">Budget: $</string>
    <string name="budgetValue">0</string>
    <string name="srNo">SR. No</string>
    <string name="itemName">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="editItemName">Item </string>
    <string name="editQuantity">Quantity</string>
    <string name="editPrice">Price</string>
    <string name="totalCost">TotalCost</string>
    <string name="total">Total: </string>
    <string name="buttonViewHistory">History</string>
    <string name="buttonSaveCart">Save Cart</string>
    <string name="buttonAddNewItem">+</string>
    <string name="buttonDeleteItem">-</string>
    <string name="trackLocation">Location</string>
    <string name="stopGPS">Stop GPS</string>
    <string name="getAddress">address</string>

    <string name="history">history</string>
    <color name="backColor">#2d2d2d</color>
    <color name="foreColor">#e5e5e5</color>
    <color name="listHeadingBackColor">#ababab</color>

    <string name="title_activity_view_history">ViewHistory</string>

</resources>