<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".CartDetails" >

    <TextView
        android:id="@+id/banner_main"
        style="@style/BannerTheme"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/banner_main" />

    <TextView
        android:id="@+id/banner_desc"
        style="@style/BannerDescTheme"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:text="@string/banner_desc" />

    <TextView
        android:id="@+id/enterStoreName"
        style="@style/ForeColorTheme"
        android:layout_column="0"
        android:layout_marginTop="25dp"
        android:layout_row="2"
        android:hint="@string/enterStoreName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editStoreName"
        style="@style/ForeColorTheme"
        android:layout_column="1"
        android:layout_marginTop="25dp"
        android:layout_row="2"
        android:hint="@string/editStoreName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/enterBudget"
        style="@style/ForeColorTheme"
        android:layout_column="0"
        android:layout_row="3"
        android:hint="@string/enterBudget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editBudget"
        style="@style/ForeColorTheme.Number"
        android:layout_column="1"
        android:layout_row="3"
        android:hint="@string/editBudget"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonGoToCart"
        style="@style/ForeColorTheme"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_row="4"
        android:onClick="gotoCart"
        android:text="@string/buttonGoToCart" />
    <!--
         <Button
        android:id="@+id/buttonCloseApp"
        style="@style/ForeColorTheme"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_row="4"
        android:onClick="gotoCart"
        android:text="@string/buttonCloseApp" />
    -->

</GridLayout>