<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:columnCount="1" >

    <LinearLayout
        android:id="@+id/itemHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/itemName"
            style="@style/ForeColorTheme.Medium"
            android:layout_gravity="start"
            android:text="@string/itemName" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/quantity"
            style="@style/ForeColorTheme.Medium"
            android:layout_gravity="start"
            android:text="@string/quantity" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/price"
            style="@style/ForeColorTheme.Medium"
            android:layout_gravity="start"
            android:text="@string/price" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/amount"
            style="@style/ForeColorTheme.Medium"
            android:layout_gravity="start"
            android:text="@string/amount" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
 <TextView
        android:id="@+id/textBill"
        android:scrollbars="horizontal|vertical"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:background="@drawable/border"
        android:layout_gravity="center|top"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemHeading">
    </TextView>
    <ListView
        android:id="@+id/listBill"
         android:scrollbars="horizontal|vertical"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:background="@drawable/border"
        android:layout_gravity="center|top"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBill"
        android:layout_alignParentBottom="true">
    </ListView>

</RelativeLayout>