<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayoutCart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".CartDetails" >

    <GridLayout
        android:id="@+id/bannerGrid"
        style="@style/BannerDescTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:id="@+id/storeName"
            style="@style/BannerDescTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/storeName" />

        <TextView
            android:id="@+id/location"
            style="@style/BannerDescTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/location" />

        <TextView
            android:id="@+id/date"
            style="@style/ForeColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/budget"
                style="@style/BannerDescTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/budgetValue"
                style="@style/BannerDescTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgetValue"
                android:textStyle="bold" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:id="@+id/footerButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonViewHistory"
            style="@style/ForeColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="viewHistory"
            android:text="@string/buttonViewHistory" />

        <!--
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonClose"
            style="@style/ForeColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:onClick="closeApp"
            android:text="@string/buttonClose" />
        -->

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonSaveCart"
            style="@style/ForeColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:onClick="saveToDatabase"
            android:text="@string/buttonSaveCart" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerButtonsLayout"
        android:layout_below="@+id/bannerGrid"
        android:layout_gravity="fill"
        android:background="@color/backColor" >

        <LinearLayout
            android:id="@+id/newItemTemplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal" >

            <!--
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            -->

            <Button
                android:id="@+id/buttonAddNewItem"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@drawable/additem"
                android:onClick="addItem" />

            <Button
                android:id="@+id/buttonDeleteItem"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@drawable/removeitem"
                android:onClick="deleteItem" />
            <!--
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            -->

            <EditText
                android:id="@+id/editItemName"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/editItemName" />

            <EditText
                android:id="@+id/editQuantity"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/editPrice"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/amountValue"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newItemTemplate"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/border"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/listHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <!--
            <TextView
                android:id="@+id/srNo"
                style="@style/ItemListHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/srNo" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
                -->

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/itemName"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/itemName" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/quantity" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/price"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/price" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/amount"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/amount" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <ListView
                android:id="@+id/listItemInCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalCostFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/totalCostFooter"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:layout_margin="1dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/totalCost" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/total"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/totalCost"
                    style="@style/ItemListHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/totalCost" />

                <!--
            <Button
                android:id="@+id/trackLocation"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/trackLocation"
                android:onClick="trackLocation" >
            </Button>

            <Button
                android:id="@+id/stopGPS"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/stopGPS"
                android:onClick="stopGPS" >
            </Button>

            <Button
                android:id="@+id/getAddress"
                style="@style/ForeColorTheme.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/getAddress"
                android:onClick="calcAddress" >
            </Button>
                -->
            </LinearLayout>
        </LinearLayout>
        <!--
        <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/composite"/>
        -->

    </RelativeLayout>

</RelativeLayout>